create models, controllers and views

--- a/ShikShaq/appsettings.json
+++ b/ShikShaq/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ShikShaqContext": "Server=(localdb)\\mssqllocaldb;Database=ShikShaqContext;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
