--- a/ShikShaq/ShikShaq.csproj
+++ b/ShikShaq/ShikShaq.csproj
@@ -5,9 +5,22 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="Data\ExampleGamesResponse.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Data\ExampleGamesResponse.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.10" />
+    <PackageReference Include="RestSharp" Version="106.11.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\lib\jquery-data\" />
   </ItemGroup>
 
 </Project>
