Added authentication to all manager pages. seems to not break anything

--- a/ShikShaq/ShikShaq.csproj
+++ b/ShikShaq/ShikShaq.csproj
@@ -6,9 +6,11 @@
 
   <ItemGroup>
     <Content Remove="Data\ExampleGamesResponse.json" />
+    <Content Remove="Data\ExampleGamesResponseOLD.json" />
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="Data\ExampleGamesResponseOLD.json" />
     <None Include="Data\ExampleGamesResponse.json" />
   </ItemGroup>
 
